<resources>
    <string name="app_name">ChlorineFinalProject</string>
    <string name="title_activity_list_of_children">List Of Children</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_edit_or_delete_child">Edit Or Delete Child</string>
    <string name="child_name">Child Name:</string>
    <string name="delete_child">Delete Child</string>
    <string name="deleted_child">Deleted Child</string>
    <string name="save_changes">Save Changes</string>
    <string name="practical_parent">Practical Parent</string>
    <string name="coin_flip">Coin Flip</string>
    <string name="timeout_timer">Timeout Timer</string>
    <string name="configure_children">Configure Children</string>
    <string name="timer_textview">"%1$d : %2$02d"</string>
    <string name="timer_rate_textview">"Timer @ %1$d%%"</string>
    <string name="timer_rate">"Timer Rate"</string>
    <string name="timer_start_button_text">Start</string>
    <string name="timer_pause_button_text">Pause</string>
    <string name="timer_resume_button_text">Resume</string>
    <string name="timer_reset_button_text">Reset</string>
    <string name="timer_radio_button_text">"%1d Minutes"</string>
    <string name="name">Name</string>
    <string name="timer_custom_radio_text">Custom</string>
    <string name="edit_or_delete_child">Edit Or Delete Child</string>
    <string name="loonie">Loonie</string>
    <string name="minutes">minutes</string>
    <string name="add_child">Add Child</string>
    <string name="add_task">Add Task</string>
    <string name="clear_children">Clear Children</string>
    <string name="invalid_timer_duration">Invalid Timer Duration</string>
    <string name="timer_running_notification_message">Timer running!</string>
    <string name="timer_notification_title">Timeout Timer</string>
    <string name="timer_finish_notification_message">Timer is up!</string>
    <string name="title_activity_coin_flip_choose">Coin Flip - Choose Child</string>
    <string name="title_activity_coin_flip">Coin Flip</string>
    <string name="coin_flip_text_view">%1$s chose %2$s!</string>
    <string name="flip_history_button_text">History</string>
    <string name="title_activity_timer">Timeout Timer</string>
    <string name="title_activity_coin_flip_history">Coin Flip History</string>
    <string name="text_heads">heads</string>
    <string name="text_tails">tails</string>
    <string name="coin_flip_history_text">"%1$s chose %2$s"</string>
    <string name="user">Undefined User</string>
    <string name="title">title</string>
    <string name="x_icon">x icon</string>
    <string name="trash_icon">trash icon</string>
    <string name="whose_turn">Whose Turn</string>
    <string name="delete">Delete</string>
    <string name="task_name">Task Name</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_colon">Task:</string>
    <string name="task">Task</string>
    <string name="save">Save</string>
    <string name="saved">Saved!</string>
    <string name="current_turn">Current Turn:</string>
    <string name="turn_complete">Turn complete!</string>
    <string name="turn_history">Turn History</string>
    <string name="edit_task_name">edit task name</string>
    <string name="image_of_the_child">image of the child</string>
    <string name="upload_image">Upload Image</string>
    <string name="child_profile_picture">child profile picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="help">Help</string>
    <string name="helpScreenTitle">About Practical Parent!</string>
    <string name="helpDescription">Our Practical Parent app was designed to efficiently solve household disputes between children.
        Currently supporting a variety of features including a child list, stop watch, coin flip, and task manager.</string>
    <string name="citationDescription">For video/website tutorials and copyright use, click the following</string>
    <string name="citationTitle">Citations:</string>
    <string name="developerNameTitle">Developed By:</string>
    <string name="developerNames">Johnny Mai, Jack Manuel, Cuthbert Martin Lwinga, Carson Lin</string>
    <string name="citationLinks">
        <a href="https://www.youtube.com/watch?v=qO3FFuBrT2E">
         On Activity Result Deprecated Video\n</a>
        <a href="https://www.youtube.com/watch?v=E6vE8fqQPTE">
         Custom ListView Adapter Video\n</a>
        <a href="https://stackoverflow.com/questions/62671106/onactivityresult-method-is-deprecated-what-is-the-alternative">
         On Activity Result Deprecated S.O\n</a>
        <a href="https://stackoverflow.com/questions/7488643/how-to-convert-comma-separated-string-to-list">
            Comma separated string Parsing S.O\n</a>
        <a href="https://stackoverflow.com/questions/2361497/how-to-create-edittext-accepts-alphabets-only-in-android/35954993">
         EditText only allowing letters S.O\n</a>
        <a href="https://stackoverflow.com/questions/68575866/to-run-a-simple-link-with-linkmovementmethod-in-android">
         Hyperlink with link movement S.O\n </a>
        <a href="https://www.youtube.com/watch?v=YsHHXg1vbcc">
         Timer visual progressbar xml formatting\n </a></string>
    <string name="flip_override_button_text">Override</string>
    <string name="flip_choose_none_button_text">Choose none</string>
    <string name="helpTitle">Help</string>
    <string name="duplicate_task_name">Already a task with that name!</string>
    <string name="take_breath_main_button">Take Breath</string>
    <string name="beginButtonText">Begin</string>
    <string name="number_of_breaths">Number Of Breaths:</string>
    <string name="breathsMessage">Let\'s take %1$d breaths together</string>
    <string name="inhaleButtonText">In</string>
    <string name="exhaleButtonText">Out</string>
    <string name="help_Message">Help Message:</string>
    <string name="breath_in_ten_second_message">Release button and breath out</string>
    <string name="breath_in_message">Hold button and breath in</string>
    <string name="breath_out_message">Hold button and breath out</string>
    <string name="goodJobButtonText">Good Job</string>
    <string name="good_job_help_text">Press button to start exercise again</string>
    <string name="minimum_breath_count">1</string>
    <string name="maximum_breath_count">10</string>

</resources>