<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpScreenActivity">

    <TextView
        android:id="@+id/citationDescription"
        android:layout_width="277dp"
        android:layout_height="59dp"
        android:gravity="center"
        android:text="@string/citationDescription"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpTitle"
        app:layout_constraintVertical_bias="0.353" />

    <TextView
        android:id="@+id/citationLinks"
        android:layout_width="379dp"
        android:layout_height="163dp"
        android:gravity="center"
        android:text="@string/citationLinks"
        android:textColor="#00796B"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpTitle"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/Citations"
        android:layout_width="214dp"
        android:layout_height="49dp"
        android:fontFamily="@font/mochiy_font"
        android:gravity="center"
        android:text="@string/citationTitle"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <TextView
        android:id="@+id/developerNames"
        android:layout_width="214dp"
        android:layout_height="49dp"
        android:fontFamily="@font/mochiy_font"
        android:gravity="center"
        android:text="@string/developerNameTitle"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

    <TextView
        android:id="@+id/helpTitle"
        android:layout_width="309dp"
        android:layout_height="91dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/mochiy_font"
        android:gravity="center"
        android:text="@string/helpScreenTitle"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout3" />

    <TextView
        android:id="@+id/helpDescription"
        android:layout_width="359dp"
        android:layout_height="131dp"
        android:gravity="center"
        android:text="@string/helpDescription"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/helpDescription2"
        android:layout_width="277dp"
        android:layout_height="59dp"
        android:gravity="center"
        android:text="@string/developerNames"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpTitle"
        app:layout_constraintVertical_bias="0.941" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ChlorineFinalProject.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.ChlorineFinalProject.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>